# onnx-runtime-examples

./: .gitignore  Dockerfile.cuda  Dockerfile.trt  README.md  docker-compose.yml  requirements_gpu.txt  resnet50_modelzoo_onnxruntime_inference.ipynb  resnet50_modelzoo_onnxruntime_inference.py  simple_onnxruntime_inference.py
cpp/: CMakeLists.txt  download_models.sh  ort_squeezenet.cpp
python/: environment-gpu.yml  environment.yml  get_resnet.py  requirements.txt  requirements_gpu.txt  resnet50_modelzoo_onnxruntime_inference.py  simple_onnxruntime_inference.ipynb  simple_onnxruntime_inference.py
